2006-08-20 Hideki Iwamoto  <h-iwamoto@kit.hi-ho.ne.jp>

	* fhandler_disk_file.cc (fhandler_disk_file::pread): Fix comparison
	of return value of lseek.

2006-08-17  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_serial.cc (raw_read): Evaluate minchars taking the
	vmin_ > ulen case into account.  Simplify evaluating the bytes to read.
	Don't use bytes in Queue value from ClearCommError call in case vtime_
	is > 0.  Reformat GetOverlappedResult call.  Simplify call to ReadFile.

2006-08-10  Christopher Faylor  <cgf@timesys.com>

	* pinfo.cc (_onreturn::~onreturn): Don't attempt to close a NULL
	handle.

2006-08-10  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::lock): Handle
	ERROR_NOT_LOCKED returned from UnlockFileEx.

2006-07-23  Christopher Faylor  <cgf@timesys.com>

	* include/cygwin/version.h: Bump DLL minor version number to 22.

2006-07-19  Corinna Vinschen  <corinna@vinschen.de>

	* pinfo.cc (commune_process): Don't add extra \0 to cmdline.
	(_pinfo::cmdline): Ditto process internal.

2006-07-19  Corinna Vinschen  <corinna@vinschen.de>

	* mmap.cc (msync): Disable rounding up len.  Fix bug in access check
	loop.

2006-07-19  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_worker): Return EEXIST if newpath exists.

2006-07-18  Christopher Faylor  <cgf@timesys.com>

	* tty.cc (tty_list::terminate): Don't enter the busy loop if we don't
	own the master.

2006-07-18  Silvio Laguzzi  <slaguzzi@data-al.de>

	* sec_acl.cc (acltotext32): Add missing handling of default ACL entry
	types.

2006-07-18  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_floppy.cc (fhandler_dev_floppy::ioctl): Fix typo in lint
	directive.

2006-07-17  Christopher Faylor  <cgf@timesys.com>

	GCC 4.1 fixes.
	* cygheap.h (cygheap_user): Remove unneeded class names from function
	declaration.
	* fhandler.h (fhandler_base): Ditto.
	(fhandler_dev_floppy): Ditto.
	(fhandler_console): Ditto.
	* wininfo.h (wininfo): Ditto.