@@ -1,4 +1,8 @@
-2006-08-20 Hideki Iwamoto  <h-iwamoto@kit.hi-ho.ne.jp>
+2006-08-31  Corinna Vinschen  <corinna@vinschen.de>
+
+	* grp.cc (initgroups32): Run get_server_groups under original token.
+
+2006-08-20  Hideki Iwamoto  <h-iwamoto@kit.hi-ho.ne.jp>
 
 	* fhandler_disk_file.cc (fhandler_disk_file::pread): Fix comparison
 	of return value of lseek.
